tests/sksl/errors/Ossfuzz37465.glsl
### Compilation failed:

error: 1: function 'f' can exit without returning a value
float f(const float x) { 5+x; }
                       ^^^^^^^^
1 error
